@@ -488,6 +488,7 @@ find_traces_1_round (int branch_th, int exec_th, gcov_type count_th,
       do
 	{
 	  int prob, freq;
+	  bool ends_in_call;
 
 	  /* The probability and frequency of the best edge.  */
 	  int best_prob = INT_MIN / 2;
@@ -500,6 +501,8 @@ find_traces_1_round (int branch_th, int exec_th, gcov_type count_th,
 	  if (dump_file)
 	    fprintf (dump_file, "Basic block %d was visited in trace %d\n",
 		     bb->index, *n_traces - 1);
+
+          ends_in_call = block_ends_with_call_p (bb);
 
 	  /* Select the successor that will be placed after BB.  */
 	  FOR_EACH_EDGE (e, ei, bb->succs)
@@ -519,6 +522,19 @@ find_traces_1_round (int branch_th, int exec_th, gcov_type count_th,
 
 	      prob = e->probability;
 	      freq = EDGE_FREQUENCY (e);
+
+	      /* The only sensible preference for a call instruction is the
+		 fallthru edge.  Don't bother selecting anything else.  */
+	      if (ends_in_call)
+		{
+		  if (e->flags & EDGE_CAN_FALLTHRU)
+		    {
+		      best_edge = e;
+		      best_prob = prob;
+		      best_freq = freq;
+		    }
+		  continue;
+		}
 
 	      /* Edge that cannot be fallthru or improbable or infrequent
 		 successor (i.e. it is unsuitable successor).  */
